repoze.who Changelog
====================

After 2.0a2 (unreleased)
-----------------------

- In ``repoze.who.restrict``, return headers as a list, to keep ``wsgiref``
  from complaining.

- Help default request classifier cope with xml submissions with an
  explicit charset defined: http://bugs.repoze.org/issue145 (Lorenzo
  M. Catucci)

- Correct the handling of type and subtype when matching an XML post
  to ``xmlpost`` in the default classifier, which, according to RFC
  2045, must be matched case-insensitively:
  http://bugs.repoze.org/issue145 (Lorenzo M. Catucci)

- Added ``repoze.who.config:make_api_factory_with_config``, a convenience
  method for applications which want to set up their own API Factory from
  a configuration file.
  
- Fixed example call to ``repoze.who.config:make_middleware_with_config``
  (added missing ``global_config`` argument).  See
  http://bugs.repoze.org/issue114

2.0a2 (2010-03-25)
------------------

Bugs Fixed
~~~~~~~~~~

- Fixed failure to pass substution values in log message string formatting
  for ``repoze.who.api:API.challenge``.  Fix included adding tests for all
  logging done by the API object.  See http://bugs.repoze.org/issue122

Backward Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~

- Adjusted logging level for some lower-level details from ``info``
  to ``debug``.


2.0a1 (2010-02-24)
------------------

Features
~~~~~~~~

- Restored the ability to create the middleware using the old ``classifier``
  argument.  That argument is now a deprecated-but-will-work-forever alias for
  ``request_classifier``.

- The ``auth_tkt`` plugin now implements the ``IAuthenticator`` interface,
  and should normally be used both as an ``IIdentifier`` and an
  ``IAuthenticator``.

- Factored out the API of the middleware object to make it useful from
  within the application.  Applications using ``repoze.who``` now fall into
  one of three catgeories:

  - "middleware-only" applications are configured with middleware, and