@@ -4,6 +4,10 @@ repoze.who Changelog
 After 2.0a2 (unreleased)
 -----------------------
 
+- Make the ``repoze.who.plugins.cookie.InsecureCookiePlugin`` take a
+  ``charset`` argument, and use to to encode / decode login and password.
+  See http://bugs.repoze.org/issue155
+
 - In ``repoze.who.restrict``, return headers as a list, to keep ``wsgiref``
   from complaining.
 
